# formlogic-rust

./: .gitignore  Cargo.toml  README.md
crates/formlogic-core/: Cargo.toml
crates/formlogic-core/examples/: probe.rs
crates/formlogic-core/src/: ast.rs  bytecode.rs  code.rs  compiler.rs  config.rs  db_bridge.rs  draw_bridge.rs  engine.rs  env_bridge.rs  fs_bridge.rs  host_bridge.rs  http_bridge.rs  imports.rs  input_bridge.rs  intern.rs  layout_bridge.rs  lexer.rs  lib.rs  local_storage.rs  object.rs  parser.rs  rcode.rs  rcompiler.rs  rvm.rs  token.rs  value.rs  vm.rs
crates/formlogic-core/tests/: bench_register_vs_stack.rs  counter_resolved.logic  engine_parity.rs  features_parity.rs  lexer_parity.rs  parser_parity.rs
crates/formlogic-wasm/: Cargo.toml  README.md
crates/formlogic-wasm/examples/: browser-smoke.html  node-smoke.mjs
crates/formlogic-wasm/src/: lib.rs
crates/formlogic-wasm/tests/: api_smoke.rs
scripts/: benchmark-js-vs-wasm.mjs  benchmark-native-js-suite-vs-wasm.mjs  benchmark-native-js-vs-wasm.mjs  benchmark-three-way.mjs  wasm-build-node.ps1  wasm-build.ps1  wasm-smoke.ps1
